--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "hxu",
-    "license": "MIT",
     "dependencies": {
         "express": "^5.2.1"
-    }
+    },
+    "author": "hxu",
+    "license": "MIT"
 }
