--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "start": "node server.js",
         "start:dev": "NODE_ENV=development node server.js",
         "start:prod": "NODE_ENV=production node server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest tests --watchAll=false --ci --forceExit --detectOpenHandles --maxWorkers=2",
+        "test:security": "jest tests/security --watchAll=false --ci --forceExit",
+        "test:coverage": "jest tests --coverage --watchAll=false --ci --forceExit"
     },
     "engines": {
         "node": ">=18.0.0"
@@ -20,5 +22,9 @@
         "helmet": "^8.1.0"
     },
     "author": "hxu",
-    "license": "MIT"
+    "license": "MIT",
+    "devDependencies": {
+        "jest": "^30.2.0",
+        "supertest": "^7.2.2"
+    }
 }
