--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hello_world",
     "version": "1.0.0",
     "description": "Hello world in Node.js",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "start": "node server.js",
         "test": "jest --detectOpenHandles --forceExit"
